meta + service worker

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width" />
+    <meta name="description" content="A calculator for business valuations" />
     <title>Hello Sharks!</title>
     <style>
       html {
@@ -114,6 +116,12 @@
 
       amountInput.addEventListener("input", handleInput, false);
       percentInput.addEventListener("input", handleInput, false);
+    </script>
+    
+    <script type="text/javascript">
+      if ("serviceWorker" in navigator) {
+        navigator.serviceWorker.register("/service-worker.js");
+      }
     </script>
   </body>
 </html>
