request numeric keyboards

--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
         <span class="quot">&ldquo;</span>I'm seeking $<input
           id="amount"
           value="50,000"
+          inputmode="numeric" pattern="[0-9]*" />
         />
-        for <input id="percent" value="20" type="number" /> percent of my
+        for <input id="percent" value="20" inputmode="numeric" pattern="[0-9]*" /> percent of my
         company…<span class="quot">&rdquo;</span>
       </p>
       <hr />
