add manifest file

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
     <title>Hello Sharks!</title>
     <meta name="description" content="A calculator for business valuations" />
+    <link rel="manifest" href="/manifest.webmanifest">
 
     <style media="screen">
       html {
